--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <style>
     html {
-      background: #018DED url(/hourglass-620397_1280.jpg);
+      background: #018DED url(hourglass-620397_1280.jpg);
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
